--- a/about.html
+++ b/about.html
@@ -1,195 +1,245 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
-<!--HEAD-->
+  <!--HEAD-->
 
-<head>
-    <title>
-        Steven Crosby Software Engineer
-    </title>
+  <head>
+    <title>Steven Crosby Software Engineer</title>
     <!--META-->
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no"
-          name="viewport"/>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no"
+      name="viewport"
+    />
     <!--FONTS/CSS-->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="assets/css/material-kit.css"/>
-    <link rel="stylesheet" type="text/css"
-          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600&family=Red+Hat+Display:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap"
-          rel="stylesheet">
-</head>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="assets/css/material-kit.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600&family=Red+Hat+Display:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body class="landing-page sidebar-collapse">
-<!--NAVIGATION-->
-<nav class="navbar navbar-color-on-scroll navbar-transparent fixed-top navbar-expand-lg" id="sectionsNav">
-    <div class="container">
+  <body class="landing-page sidebar-collapse">
+    <!--NAVIGATION-->
+    <nav
+      class="navbar navbar-color-on-scroll navbar-transparent fixed-top navbar-expand-lg"
+      id="sectionsNav"
+    >
+      <div class="container">
         <div class="navbar-translate">
-            <a class="navbar-brand" href="#" style="font-family: Red Hat Display, sans-serif; font-weight: 500;"> STEVEN
-                CROSBY </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="navbar-toggler-icon"></span>
-                <span class="navbar-toggler-icon"></span>
-                <span class="navbar-toggler-icon"></span>
-            </button>
+          <a
+            class="navbar-brand"
+            href="#"
+            style="font-family: Red Hat Display, sans-serif; font-weight: 500"
+          >
+            STEVEN CROSBY
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="sr-only">Toggle navigation</span>
+            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
+          </button>
         </div>
         <div class="collapse navbar-collapse">
-            <ul class="navbar-nav ml-auto" style="font-family: Red Hat Display, sans-serif; font-weight: 500;">
-                <li class="nav-item">
-                    <a href="index.html" class="nav-link">
-                        <i class="material-icons">home</i> Home
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="education.html" class="nav-link">
-                        <i class="material-icons">school</i> Education
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="experience.html" class="nav-link">
-                        <i class="material-icons">code</i> Experience
-                    </a>
-                </li>
-            </ul>
+          <ul
+            class="navbar-nav ml-auto"
+            style="font-family: Red Hat Display, sans-serif; font-weight: 500"
+          >
+            <li class="nav-item">
+              <a href="index.html" class="nav-link">
+                <i class="material-icons">home</i> Home
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="education.html" class="nav-link">
+                <i class="material-icons">school</i> Education
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="experience.html" class="nav-link">
+                <i class="material-icons">code</i> Experience
+              </a>
+            </li>
+          </ul>
         </div>
-    </div>
-</nav>
+      </div>
+    </nav>
 
-<!--MAIN-->
-<div class="page-header header-filter" data-parallax="true"
-     style="background-image: url('assets/img/family.JPEG');">
-    <div class="container">
+    <!--MAIN-->
+    <div
+      class="page-header header-filter"
+      data-parallax="true"
+      style="background-image: url('assets/img/family.JPEG')"
+    >
+      <div class="container">
         <div class="row">
-            <div class="col-md-8">
-                <h1 style="font-family: Red Hat Display, sans-serif; font-weight: 900;">
-                    Father. Husband. Soldier.<br>
-                    Software Engineer.
-                </h1>
-                <h5 style="font-family: Railway, sans-serif; font-weight: 700;">Hello !</h5>
-                <h5 style="font-family: Railway, sans-serif; font-weight: 400;">
-                    I'm Steven. I'm a veteran enterprise sales slayer who's now
-                    conquering software engineering. I'm proficient in
-                    full-stack development, including Python, Java, C++, JavaScript, HTML/CSS, and
-                    SQL database. I'm engaged in freelance software development on
-                    UpWork in addition to entering my senior year at Brigham Young
-                    University.
-                </h5>
-            </div>
+          <div class="col-md-8">
+            <h1
+              style="font-family: Red Hat Display, sans-serif; font-weight: 900"
+            >
+              Father. Husband. Soldier.<br />
+              Software Engineer.
+            </h1>
+            <h5 style="font-family: Railway, sans-serif; font-weight: 700">
+              Hello !
+            </h5>
+            <h5 style="font-family: Railway, sans-serif; font-weight: 400">
+              I'm Steven. I'm a veteran enterprise sales slayer who's now
+              conquering software engineering. I'm proficient in full-stack
+              development, including Python, Java, C++, JavaScript, HTML/CSS,
+              and SQL database. I'm engaged in freelance software development on
+              UpWork in addition to entering my senior year at Brigham Young
+              University.
+            </h5>
+          </div>
         </div>
+      </div>
     </div>
-</div>
-<div class="main main-raised">
-    <div class="container">
+    <div class="main main-raised">
+      <div class="container">
         <div class="section section-text">
-            <div class="row">
-                <div class="col-md-8 ml-auto mr-auto">
-                    <h3 style="font-family: Red Hat Display, sans-serif; font-weight: 700;">
-                        Let&apos;s dig deeper...
-                    </h3>
-                    <h5 style="font-family: Railway, sans-serif; font-weight: 400;">
-                        My wife, Alexandria, and I have been together for 12 years.
-                        Our life together has been the most incredible blessing
-                        and unpredictable story I can imagine. Since we were married in 2009:
-                    </h5>
-                    <br/>
-                    <div class="blockquote undefined">
-                        <ul style="font-family: Railway, sans-serif; font-weight: 300; font-style: italic; list-style: none;">
-                            <li>
-                                I completed both US Army Basic and Advanced Training
-                            </li>
-                            <br>
-                            <li>
-                                I've continued to pursue my college education
-                            </li>
-                            <br>
-                            <li>We've endured unexpected unemployment</li>
-                            <li><br>
-                                We've moved several times
-                            </li>
-                        </ul>
-                    </div>
-                    <br>
-                    <h5 style="font-family: Railway, sans-serif; font-weight: 400;">
-                        And through all that, and much more, we've been raising four
-                        curiously crazy children, ages 9 and younger.
-                    </h5>
-                    <h5 style="font-family: Railway, sans-serif; font-weight: 400;">
-                        All my experiences have primed my talents and capabilities
-                        for my career in software engineering. I believe that my innate curiosity
-                        and imagination are essential to producing exceptional software. I have a
-                        passion for creating the best programming solutions and applications that
-                        I possibly can.
-                    </h5>
-                    <h5 style="font-family: Railway, sans-serif; font-weight: 400;">
-                        I also believe that my success as a husband, father, soldier,
-                        and collegiate student have demonstrated my grit and my ability to thrive under the rigors
-                        required of a professional software engineer.
-                    </h5>
-                </div>
+          <div class="row">
+            <div class="col-md-8 ml-auto mr-auto">
+              <h3
+                style="
+                  font-family: Red Hat Display, sans-serif;
+                  font-weight: 700;
+                "
+              >
+                Let&apos;s dig deeper...
+              </h3>
+              <h5 style="font-family: Railway, sans-serif; font-weight: 400">
+                My wife, Alexandria, and I have been together for 12 years. Our
+                life together has been the most incredible blessing and
+                unpredictable story I can imagine. Since we were married in
+                2009:
+              </h5>
+              <br />
+              <div class="blockquote undefined">
+                <ul
+                  style="
+                    font-family: Railway, sans-serif;
+                    font-weight: 300;
+                    font-style: italic;
+                    list-style: none;
+                  "
+                >
+                  <li>I completed both US Army Basic and Advanced Training</li>
+                  <br />
+                  <li>I've continued to pursue my college education</li>
+                  <br />
+                  <li>We've endured unexpected unemployment</li>
+                  <li>
+                    <br />
+                    We've moved several times
+                  </li>
+                </ul>
+              </div>
+              <br />
+              <h5 style="font-family: Railway, sans-serif; font-weight: 400">
+                And through all that, and much more, we've been raising four
+                curiously crazy children, ages 9 and younger.
+              </h5>
+              <h5 style="font-family: Railway, sans-serif; font-weight: 400">
+                All my experiences have primed my talents and capabilities for
+                my career in software engineering. I believe that my innate
+                curiosity and imagination are essential to producing exceptional
+                software. I have a passion for creating the best programming
+                solutions and applications that I possibly can.
+              </h5>
+              <h5 style="font-family: Railway, sans-serif; font-weight: 400">
+                I also believe that my success as a husband, father, soldier,
+                and collegiate student have demonstrated my grit and my ability
+                to thrive under the rigors required of a professional software
+                engineer.
+              </h5>
             </div>
+          </div>
         </div>
+      </div>
     </div>
-</div>
 
-<!--FOOTER-->
-<footer class="footer footer-default">
-    <div class="container" style="font-family: Red Hat Display, sans-serif; font-weight: 500;">
+    <!--FOOTER-->
+    <footer class="footer footer-default">
+      <div
+        class="container"
+        style="font-family: Red Hat Display, sans-serif; font-weight: 500"
+      >
         <nav class="float-left">
-            <ul>
-                <li>
-                    <a href="https://github.com/steven-crosby">
-                        GITHUB
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.linkedin.com/in/scrosby09/">
-                        LINKEDIN
-                    </a>
-                </li>
-                <li>
-                    <a href="https://twitter.com/SCrosby09">
-                        TWITTER
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/steven.crosby09/">
-                        FACEBOOK
-                    </a>
-                </li>
-            </ul>
+          <ul>
+            <li>
+              <a href="https://github.com/steven-crosby"> GITHUB </a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/steven-crosby09/">
+                LINKEDIN
+              </a>
+            </li>
+            <li>
+              <a href="https://twitter.com/SCrosby09"> TWITTER </a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/steven.crosby09/"> FACEBOOK </a>
+            </li>
+          </ul>
         </nav>
-    </div>
-</footer>
-</body>
-<!--JS Files-->
-<script src="assets/js/jquery.min.js" type="text/javascript"></script>
-<script src="assets/js/popper.min.js" type="text/javascript"></script>
-<script src="assets/js/bootstrap-material-design.min.js" type="text/javascript"></script>
-<script src="assets/js/moment.min.js"></script>
-<script src="assets/js/bootstrap-datetimepicker.js" type="text/javascript"></script>
-<script src="assets/js/nouislider.min.js" type="text/javascript"></script>
-<script src="assets/js/bootstrap-tagsinput.js"></script>
-<script src="assets/js/bootstrap-selectpicker.js" type="text/javascript"></script>
-<script src="assets/js/jasny-bootstrap.min.js" type="text/javascript"></script>
-<script src="assets/js/jquery.flexisel.js" type="text/javascript"></script>
-<script src="assets/js/modernizr.js"></script>
-<script src="assets/js/vertical-nav.js" type="text/javascript"></script>
-<script async defer src="https://buttons.github.io/buttons.js"></script>
-<script src="assets/js/material-kit.js" type="text/javascript"></script>
-<script>
+      </div>
+    </footer>
+  </body>
+  <!--JS Files-->
+  <script src="assets/js/jquery.min.js" type="text/javascript"></script>
+  <script src="assets/js/popper.min.js" type="text/javascript"></script>
+  <script
+    src="assets/js/bootstrap-material-design.min.js"
+    type="text/javascript"
+  ></script>
+  <script src="assets/js/moment.min.js"></script>
+  <script
+    src="assets/js/bootstrap-datetimepicker.js"
+    type="text/javascript"
+  ></script>
+  <script src="assets/js/nouislider.min.js" type="text/javascript"></script>
+  <script src="assets/js/bootstrap-tagsinput.js"></script>
+  <script
+    src="assets/js/bootstrap-selectpicker.js"
+    type="text/javascript"
+  ></script>
+  <script
+    src="assets/js/jasny-bootstrap.min.js"
+    type="text/javascript"
+  ></script>
+  <script src="assets/js/jquery.flexisel.js" type="text/javascript"></script>
+  <script src="assets/js/modernizr.js"></script>
+  <script src="assets/js/vertical-nav.js" type="text/javascript"></script>
+  <script async defer src="https://buttons.github.io/buttons.js"></script>
+  <script src="assets/js/material-kit.js" type="text/javascript"></script>
+  <script>
     $(document).ready(function () {
-        //init DateTimePickers
-        materialKit.initFormExtendedDatetimepickers();
+      //init DateTimePickers
+      materialKit.initFormExtendedDatetimepickers();
 
-        // Sliders Init
-        materialKit.initSliders();
+      // Sliders Init
+      materialKit.initSliders();
     });
-</script>
-
+  </script>
 </html>
